plugins {
  id 'java'
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.9'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
  id 'maven-publish'
}

sourceCompatibility = 19
targetCompatibility = 19

repositories {
    mavenCentral()
    google()
}

javafx {
    version = "19"
    modules = [ 'javafx.controls' ]
}

jar {
    manifest {
        attributes 'Main-Class': 'io.github.justfoxx.app.Main'
    }
}

application {
    mainClass = 'io.github.justfoxx.app.Main'
}

configurations {
    shadow.extendsFrom(runtimeClasspath)
}

shadowJar {
    archiveClassifier.set('dev')
}

//compileJava {
//    options.compilerArgs += ['--enable-preview']
//}
//
//tasks.withType(JavaExec) {
//    jvmArgs += '--enable-preview'
//}

dependencies {
    implementation("commons-io:commons-io:2.11.0")
    implementation('org.slf4j:slf4j-log4j12:2.0.3')
    implementation('com.google.code.gson:gson:2.10')
}
